# packing2D

./: .gitattributes  .gitignore  ALGORITHM_DEEP_DIVE.md  BINDINGS.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_test.txt  CRITICAL_ANALYSIS.md  CTestTestfile.cmake  HybridBinPacking.cpp  LICENSE.md  Makefile  PRESENTATION.md  README.md  TECHNICAL_REPORT.md  cmake_install.cmake  demo_nfp_performance.cpp  packing_tests[1]_include.cmake  packing_tests[1]_tests.cmake  reproduce_packing_visual.py  reproduce_packing_visual_vector_font.py  svg_paths_visualizer.py  test.py  test_hybrid_packing  test_hybrid_packing.cpp  test_nfp_integration.cpp  visual_vector.py
build_test/: CMakeCache.txt
samples/: Rectangles.txt  S24.txt  S266-mc.txt  S266-rc-simp.txt  S266-rc-simp_0.1.txt  S266.txt  S46.txt  S6-2.txt  S985-rc-simp_0.1.txt  Shapes0.txt  Shapes1.txt  fail.txt  sample_pieces.txt
src/: main.cpp  python_bindings.cpp  test_hybrid_packing.cpp
src/core/: Bin.cpp  Bin.h  BinPacking.cpp  BinPacking.h  Constants.h  GeneticOptimizer.cpp  GeneticOptimizer.h  HybridBinPacking.cpp  HybridBinPacking.h  NFPManager.cpp  NFPManager.h  SimulatedAnnealingOptimizer.cpp  SimulatedAnnealingOptimizer.h
src/primitives/: MArea.cpp  MArea.h  MPointDouble.h  MVector.cpp  MVector.h  Rectangle.h
src/utils/: SignalHandler.cpp  SignalHandler.h  Utils.cpp  Utils.h
tests/: test_bin.cpp  test_marea.cpp  test_nfp.cpp
